# Rasterizer

./: CMakeLists.txt  README.md
DamagedHelmet/: DamagedHelmet.mtl
common/: image.h  pipeline.h
examples/: primitives.cpp  sphere.cpp  testobj.cpp  texture.cpp
